# nubison-model

./: .gitignore  .gitlab-ci.yml  README.md  fixtures  pyproject.toml  pytest.ini  test_code_review.py  tox.ini
.github/workflows/: claude-code-review.yml  container-image.yml  publish.yml
container/: Dockerfile  Dockerfile.gpu  README.md  start_server.sh
example/: README.md  infer_lightning.ipynb  infer_pytorch.ipynb  infer_sklearn.ipynb  infer_transformers.ipynb  model.ipynb  requirements.txt  train.ipynb  train_lightning.ipynb  train_pytorch.ipynb  train_sklearn.ipynb  train_transformers.ipynb
example/src/: SimpleLinearModel.py  demo.py  iris_lightning.py  iris_net.py  weights.txt
example/src/utils/: logger.py
nubison_model/: Data.py  Model.py  Service.py  Storage.py  Train.py  __init__.py
test/: conftest.py  test_data.py  test_integration.py  test_model.py  test_service.py  test_storage.py  test_train.py  utils.py
test/fixtures/: requirements-prod.txt  requirements.txt
