[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
name = "nubison-model"
version = "0.0.0"
description = ""
authors = ["KyuWoo Choi <kyuwoo.choi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
mlflow = "^2.17.0"
mlserver = "^1.3.5"
mlserver-mlflow = "^1.3.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
tox = "^4.0"

[tool.poetry-dynamic-versioning]
enable = true
