[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
name = "nubison-model"
version = "0.0.0"
description = ""
authors = ["KyuWoo Choi <kyuwoo.choi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
mlflow = "^2.17.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
tox = "^4.0"
psutil = "^6.1.0"
types-requests = "^2.32.0.20241016"
types-psutil = "^6.1.0.20241022"

[tool.poetry-dynamic-versioning]
enable = true
