[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
name = "nubison-model"
version = "0.0.0"
description = ""
authors = ["KyuWoo Choi <kyuwoo.choi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
mlflow = "^2.17.0"
bentoml = "^1.3.10"
filelock = "^3.16.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
tox = "^4.0"
psutil = "^6.1.0"
types-requests = "^2.32.0.20241016"
types-psutil = "^6.1.0.20241022"
ipykernel = "^6.29.5"
pillow = "^11.0.0"

[tool.poetry-dynamic-versioning]
enable = true
pattern = "^(?P<prefix>test-)?v(?P<base>.+)$"
format-jinja = """
    {%- if prefix -%}
        {# TestPyPI version: test-v0.0.1 → 0.0.1.dev0+test #}
        {%- if distance == 0 and not dirty -%}
            {{ base }}.dev0+test
        {%- else -%}
            {{ base }}.dev{{ distance }}+test.{{ commit }}
        {%- endif -%}
    {%- else -%}
        {# PyPI version: v0.0.1 → 0.0.1 #}
        {%- if distance == 0 and not dirty -%}
            {{ base }}
        {%- elif distance > 0 -%}
            {{ base }}.dev{{ distance }}+{{ commit }}
        {%- else -%}
            {{ base }}
        {%- endif -%}
    {%- endif -%}
"""

[tool.isort]
profile = "black"  # or your preferred profile
known_first_party = ["test"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
default_section = "THIRDPARTY"